# cpp-challenge-24

./: .gitignore  AggregatedStats.cpp  AggregatedStats.h  Aggregator.cpp  Aggregator.h  CMakeLists.txt  Dockerfile  EventBucket.cpp  EventBucket.h  EventBuffer.cpp  EventBuffer.h  LineBucket.cpp  LineBucket.h  LineBuffer.cpp  LineBuffer.h  LineProcessor.cpp  LineProcessor.h  LineReader.cpp  LineReader.h  MessageParser.cpp  MessageParser.h  MessageProcessor.cpp  MessageProcessor.h  OutputProcessor.cpp  OutputProcessor.h  README.md  TimeKeyedCollection.h  common.h  main.cpp  utils.cpp  utils.h
